--- a/statistics_and_data_vizualization_project.ipynb
+++ b/statistics_and_data_vizualization_project.ipynb
@@ -25,7 +25,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pip install -U pip pandas matplotlib plotly ipython ipykernel jupyter -U nbformat nbclient"
+        "pip install -r requirements.txt"
       ]
     },
     {
